// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComboBox rendering renders expected elements 1`] = `
<div
  className="ComboBox"
>
  <input
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="test-list"
    aria-expanded={false}
    autoComplete="off"
    className="ComboBox__input ComboBox--error"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    value="test text"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={
      Object {
        "icon": Array [],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
    id="test-add"
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
  />
  <React.Portal>
    <div
      aria-label="Options"
      className="ComboBox__list"
      id="test-list"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        Object {
          "display": "none",
        }
      }
    />
  </React.Portal>
</div>
`;

exports[`ComboBox rendering renders expected elements when error is not set 1`] = `
<div
  className="ComboBox"
>
  <input
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls="test-list"
    aria-expanded={false}
    autoComplete="off"
    className="ComboBox__input"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    value="test text"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={
      Object {
        "icon": Array [],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
    id="test-add"
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
  />
  <React.Portal>
    <div
      aria-label="Options"
      className="ComboBox__list"
      id="test-list"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        Object {
          "display": "none",
        }
      }
    />
  </React.Portal>
</div>
`;

exports[`ComboBox rendering renders expected elements when the suggestions are displayed 1`] = `
<div
  className="ComboBox"
>
  <input
    aria-activedescendant="test-0"
    aria-autocomplete="list"
    aria-controls="test-list"
    aria-expanded={true}
    autoComplete="off"
    className="ComboBox__input"
    id="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="test placeholder"
    role="combobox"
    value="x"
  />
  <IconButton
    aria-label="Add"
    className="ComboBox__add"
    disabled={false}
    icon={
      Object {
        "icon": Array [],
        "iconName": "plus",
        "prefix": "fas",
      }
    }
    id="test-add"
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
  />
  <React.Portal>
    <div
      aria-label="Options"
      className="ComboBox__list"
      id="test-list"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      role="listbox"
      style={
        Object {
          "display": null,
        }
      }
    >
      <div
        aria-selected={true}
        className="ComboBox__option TestClass"
        data-index={0}
        id="test-0"
        key={0}
        role="option"
      >
        Test suggestion 0
      </div>
      <div
        aria-selected={false}
        className="ComboBox__option TestClass"
        data-index={1}
        id="test-1"
        key={1}
        role="option"
      >
        Test suggestion 1
      </div>
    </div>
  </React.Portal>
</div>
`;
